# optics_tenant

./: .env  .env.development  .env.production  .gitignore  README.md  api  cash.py  cert.pem  contacts.csv  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  dpDesign.md  generate-zod-form.ts  key.pem  manage.py  package.json  pnpm-lock.yaml  requirements.txt  try.py  whastUp.html  whastUp.py
osmBack/: .env  .env.development  .env.production  .gitignore  .pdm-python  Dockerfile  README.md  architecture_review.md  check_crlf.py  create_public_tenant.py  entrypoint.sh  entrypoint_lf.sh  move-apps.ps1  products_architecture_review.md  pyproject.toml  requirements.txt  romve_cash.py  romve_migratian.py
osmBack/apps/accounting/: admin.py  models.py  serializers.py  urls.py  views.py
osmBack/apps/branches/: models.py  serializers.py  urls.py  views.py
osmBack/apps/crm/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
osmBack/apps/hrm/: filters.py  models.py  serializers.py  views.py
osmBack/apps/prescriptions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
osmBack/apps/products/: admin.py  forms.py  helper_functions.py  manage.py  managers.py  managers_views.py  signals.py  urls.py  utils.py  views.py
osmBack/apps/sales/: models.py  urls.py  (+3 more)
osmBack/core/: apps.py  models.py  serializers.py  urls.py  views.py
osmBack/data/: csv_config.json  csv_configo0.json  csv_configotenant.json  tenants_list.json
osmBack/optics_tenant/: asgi.py  config_loader.py  public_urls.py  urls.py
osmBack/scripts/: add_many_csv_with_forginKey.py  creat_main_domain.py  creat_step_db.py  create_tenant.py  delete_db.py  dp_password_.py  generate_order_number.py  getmedulData.py  json_to_csv.py  lens_power.py  romve_cash.py  run_commands.py  run_commands_puplic_tenant.py  send_mail.py  setup_db.py  urls.py
(+1461 files in other folders)
